# jj-stack

./: AGENTS.md  README.md  check.py  pyproject.toml
.github/workflows/: check-jj-release-updates.yml  ci.yml  codeql.yml  release.yml
docs/: AGENTS.md  README.md  daily-workflow.md  exit-codes.md  json-output.md  json-output.schema.json  mental-model.md  troubleshooting.md
docs/internals/: AGENTS.md  README.md  backlog.md  code-reviews.md  design.md  distributed-state.md  help-and-docs-plan.md  implementation-strategy.md  property-testing.md  restructuring-plan.md  testing-philosophy.md
scripts/: describe_with_claude.py  describe_with_codex.py  describe_with_editor.py  describe_with_prompt.py
skills/jj-stack/: SKILL.md
skills/jj-stack/agents/: openai.yaml
src/jj_review/: bootstrap.py  cli.py  config.py  console.py  formatting.py  ui.py
src/jj_review/commands/: __init__.py  _action_recorder.py  _close_actions.py  _operation_lock.py  _stale_stacks.py  abort.py  checkout.py  cleanup.py  close.py  close_orphan.py  doctor.py  import_.py  list_.py  relink.py  restart.py  status.py  unlink.py  unstack.py  view.py
src/jj_review/github/: client.py  error_messages.py  resolution.py
src/jj_review/jj/: client.py
src/jj_review/models/: __init__.py  github.py  intent.py  review_state.py
src/jj_review/review/: bookmarks.py  change_status.py  discovery.py  intents.py  operations.py  restart.py  selection.py  status.py  submit_recovery.py  topology.py
src/jj_review/state/: intents.py  journal.py  operation_lock.py  store.py
src/jj_stack/: __init__.py  __main__.py  bootstrap.py  cli.py  cli_help.py  completion.py  concurrency.py  config.py  console.py  errors.py  formatting.py  system.py  ui.py
src/jj_stack/commands/: __init__.py  _close_actions.py  _json_status.py  _stale_stacks.py  checkout.py  close_orphan.py  doctor.py  list_.py  relink.py  restart.py  sync.py  unlink.py  unstack.py  view.py
tests/: run_submit_property_scenarios.py
tests/integration/: conftest.py  submit_command_helpers.py  test_abort_command.py  test_boundary_conditions.py  test_checkout_command.py  test_cleanup_command.py  test_close_command.py  test_doctor_command.py  test_import_command.py  test_jj_stack.py  test_land_command.py  test_list_command.py  test_relink_command.py  test_restart_command.py  test_status_command.py  test_submit_command.py  test_submit_property_scenarios.py  test_sync_command.py  test_unlink_command.py  test_unstack_command.py  test_view_command.py
tests/property/: land_property_scenarios.py  submit_property_scenarios.py
tests/support/: fake_github.py  integration_helpers.py  json_schema.py  land_property_harness.py  land_property_scenarios.py  operation_journal_helpers.py  pytest_concurrency.py  revision_helpers.py  stack_edit_scenarios.py  submit_property_harness.py  submit_property_scenarios.py
tests/unit/: entrypoint_test_helpers.py  test_bookmarks.py  test_bootstrap.py  test_change_status.py  test_change_status_topology.py  test_check_script.py  test_checkout.py  test_cleanup.py  test_cli.py  test_cli_dispatch.py  test_close.py  test_close_orphan.py  test_completion.py  test_concurrency.py  test_config.py  test_describe_with_editor_script.py  test_describe_with_prompt_script.py  test_errors.py  test_github_auth.py  test_github_client.py  test_github_error_messages.py  test_github_models.py  test_github_resolution.py  test_import.py  test_intent.py  test_jj_client.py  test_journal.py  test_land.py  test_list.py  test_operation_lock.py  test_operations.py  test_property_runner.py  test_property_scenarios.py  test_pull_request_refs.py  test_push_rejections.py  test_relink.py  test_restart.py  test_review_status.py  test_selection.py  test_status.py  (+9 more)
tools/: install-jj-release.sh
(+72 files in other folders)
