[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "jj-review"
version = "0.1.0"
description = "JJ-native stacked GitHub review tooling"
readme = "README.md"
requires-python = ">=3.14"
keywords = ["jj", "jujutsu", "github", "pull-requests", "stacked-reviews"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "httpxyz>=0.31.2,<0.32",
  "pydantic>=2.13.4,<3",
  "rich>=15.0.0,<16",
]

[project.urls]
Homepage = "https://github.com/bos/jj-review"
Repository = "https://github.com/bos/jj-review"
Issues = "https://github.com/bos/jj-review/issues"

[project.scripts]
jj-review = "jj_review.cli:main"

[dependency-groups]
dev = [
  "fastapi>=0.136.1,<0.137",
  "pyrefly>=0.64.1,<0.65",
  "pytest>=9.0.3,<10",
  "pytest-cov>=7.1.0,<8",
  "pytest-randomly>=4.1.0,<5",
  "pytest-xdist>=3.8.0,<4",
  "ruff>=0.15.12,<0.16",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["jj_review"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 98
src = ["src", "tests", "tools"]
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyrefly]
search_path = ["src", "."]

[tool.hatch.build.targets.wheel]
packages = ["src/jj_review"]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { httpxyz = false, httpcorexyz = false }
default-groups = ["dev"]
