[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "jj-stack"
version = "0.1.0"
description = "JJ-native stacked GitHub review tooling"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
keywords = ["jj", "jujutsu", "github", "pull-requests", "stacked-reviews"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "httpxyz>=0.31.0,<0.32",
  "pydantic>=2.13.3,<3",
  "rich>=15.0.0,<16",
]

[project.urls]
Homepage = "https://github.com/bos/jj-stack"
Repository = "https://github.com/bos/jj-stack"
Issues = "https://github.com/bos/jj-stack/issues"

[project.scripts]
jj-stack = "jj_stack.cli:main"

[dependency-groups]
dev = [
  "fastapi>=0.138.2,<0.139",
  "jsonschema>=4.25.1,<5",
  "pyrefly>=1.1.1,<1.2",
  "pytest>=9.1.1,<10",
  "pytest-cov>=7.1.0,<8",
  "pytest-randomly>=4.1.0,<5",
  "pytest-xdist>=3.8.0,<4",
  "ruff>=0.15.20,<0.16",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["jj_stack"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 98
src = ["src", "tests", "tools"]
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyrefly]
search_path = ["src", "."]

[tool.hatch.build.targets.wheel]
packages = ["src/jj_stack"]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { httpxyz = false, httpcorexyz = false }
default-groups = ["dev"]
